--- a/templates/core/index.html.twig
+++ b/templates/core/index.html.twig
@@ -10,6 +10,6 @@
 
 {% block body %}
     <section class="cp-home__body">
-        <p>Hello World !</p>
+        <app-notification></app-notification>
     </section>
 {% endblock %}
