feat(style & CI): Components started for the homepage & CI started via Azure
The components for the homepage has been started.

The Azure CI has been configured for PHP image.

--- a/assets/scss/components/base.scss
+++ b/assets/scss/components/base.scss
@@ -21,4 +21,20 @@ body {
   .cp-body__main {
     padding-top: 100px;
   }
+
+  .cp-body__container {
+    text-align: center;
+  }
+
+
+  .cp-body__button-container {
+    display: flex;
+    justify-content: flex-end;
+    width: 300px;
+    margin: auto;
+
+    .button-container button {
+      margin: 3px;
+    }
+  }
 }
