--- a/assets/scss/public/app-shell.scss
+++ b/assets/scss/public/app-shell.scss
@@ -7,4 +7,7 @@
 @import "@material/top-app-bar/mdc-top-app-bar";
 @import "@material/drawer/mdc-drawer";
 @import "@material/list/mdc-list";
+// @import "@material/textfield/mdc-text-field";
+@import "@material/floating-label/mdc-floating-label";
+@import "@material/textfield/helper-text/mdc-text-field-helper-text";
 @import "@material/layout-grid/mdc-layout-grid";
