--- a/templates/_themes/_main.html.twig
+++ b/templates/_themes/_main.html.twig
@@ -1,3 +1,21 @@
-{% block form_widget %}
+{% block form_row %}
+    <div class="mdc-text-field">
+        {{ form_widget(form) }}
+        {{ form_label(form) }}
+    </div>
+    {{ form_help(form) }}
+{% endblock %}
 
+{% block form_errors %}
+    {% for error in errors %}
+        <p id="{{ form.vars['id'] }}-helper-text" class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent mdc-text-field-helper-text--validation-msg" aria-hidden="true">
+            {{ error.message }}
+        </p>
+    {% endfor %}
+{% endblock %}
+
+{% block form_help %}
+    <p id="{{ id }}-helper-text" class="mdc-text-field-helper-text" aria-hidden="true">
+        {{- help -}}
+    </p>
 {% endblock %}
