--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -1,18 +1,23 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    {{ 'registration.title'|trans }}
+    {{- 'registration.title'|trans -}}
 {% endblock %}
 
 {% block navbar_title %}
-    {{ 'registration.title'|trans }}
+    {{- 'registration.title'|trans -}}
+{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ preload(asset('build/register.css'), {'as': 'style'}) }}" />
 {% endblock %}
 
 {% form_theme form '_themes/security/_register.html.twig' %}
 
 {% block body %}
     <section class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell">
+        <div class="mdc-layout-grid__cell--span-12 mdc-layout-grid__cell--align-middle">
             <div class="cp-body__register">
                 {{ form(form) }}
             </div>
@@ -22,5 +27,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    <script type="text/javascript" src="{{ asset('build/register.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('build/register-js.js') }}"></script>
 {% endblock %}
