feat(frontend & tests) PHPUnit/Mercure fix & Visuals improvements
PHPUnit has been configured in order to use Mercure.

Small fixes on the visual aspect.

--- a/templates/_themes/_main.html.twig
+++ b/templates/_themes/_main.html.twig
@@ -2,17 +2,18 @@
     <div class="mdc-text-field">
         {{ form_widget(form) }}
         {{ form_label(form) }}
+        {{ form_errors(form) }}
     </div>
     {{ form_help(form) }}
 {% endblock %}
 
-{% block form_errors %}
+{%- block form_errors -%}
     {% for error in errors %}
         <p id="{{ form.vars['id'] }}-helper-text" class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent mdc-text-field-helper-text--validation-msg" aria-hidden="true">
             {{ error.message }}
         </p>
     {% endfor %}
-{% endblock %}
+{%- endblock -%}
 
 {% block form_help %}
     <p id="{{ id }}-helper-text" class="mdc-text-field-helper-text" aria-hidden="true">
